--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "wishlist",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx nodemon src/app.ts"
+    "dev": "nodemon --watch 'src/' --exec 'ts-node -r tsconfig-paths/register ./src/app.ts' -e ts"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +14,12 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/pg": "^8.6.6",
+    "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "tsconfig-paths": "^4.1.2",
+    "ttypescript": "^1.5.15",
+    "typescript": "^4.9.4",
+    "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
     "cors": "^2.8.5",
