--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
+    "module": "commonjs",
     "outDir": "dist",
     "esModuleInterop": true,
-    "module": "es6",
-    "moduleResolution": "Node"
-  },
-
-  "ts-node": {
-    "esm": true
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["*"]
+    },
+    "plugins": [
+      { "transform": "typescript-transform-paths" }
+    ]
   }
 }
